test/distinctname/fail/class.j
class A {
  Void main() { return; }
}

class A {
  Int a;
}
